# shopify-backend-api

./: .gitignore  .replit  Pipfile  README.md  pyproject.toml  sql_app.db
app/: crud.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: inventory.py
