[tool.poetry]
name = "shopify-backend-api"
version = "0.1.0"
description = "A shopify backend API"
authors = ["Eric K <eric.koehli@mail.utoronto.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
